installed mongoose, resolved some connection issues

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=
+MONGO_URI=mongodb+srv://test:eaIqz6mbdQ8DhhyO@prepbuddyai.6vxbknt.mongodb.net/?retryWrites=true&w=majority&appName=PrepBuddyAi
 PORT=8000
