Auth router setpu

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://test:eaIqz6mbdQ8DhhyO@prepbuddyai.6vxbknt.mongodb.net/?retryWrites=true&w=majority&appName=PrepBuddyAi
+MONGO_URI=mongodb+srv://test1:O2CzsUvE5aDaL2U4@prepbuddyai.rixiumk.mongodb.net/?appName=PrepBuddyAi
 PORT=8000
